Fix weird header issue on small screen

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -314,7 +314,7 @@ h2 {
   }
   .sheet,
   .card-container {
-    width: 90%;
+    width: 100%;
   }
 }
 .icon-center-two {
